--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>TP-2</title>
 </head>
 <body>
+    <div class="container">
         <input type="text" id="informacion" placeholder="Ingresar informacion">
-        <button onclick="AgregarTODO()">Agregar item</button>
-    <p>Lista:</p>
-    <div id="Lista"></div>
+            <button onclick="AgregarTODO()" class="Agregar">Agregar item</button>
+            <button onclick="MostrarMasRapido()" class="Mostrar">Mostrar Tarea Mas Rapida</button>
+        <p>Lista:</p>
+        <div id="Lista" class="task-list"></div>
+    </div>
 </body>
 </html>
