--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <button onclick="MostrarMasRapido()" class="Mostrar">Mostrar Tarea Mas Rapida</button>
         <p>Lista:</p>
         <div id="Lista" class="task-list"></div>
+        <div id="Fecha"></div>
     </div>
 </body>
 </html>
